# bincast

./: .gitignore  ANNOUNCE.md  BENCHMARKS.md  Cargo.toml  README.md  apm.yml  bincast.toml  binstall.toml  install.ps1  install.sh  releaser.toml
.apm/skills/bincast-add-channel/: SKILL.md
.apm/skills/bincast-init/: SKILL.md
.dep-skeptic/: allowlist.toml
.github/workflows/: release.yml
docs/: INIT_SPEC.md
homebrew/: bincast.rb
skills/bincast-init/: SKILL.md
skills/bincast-shared/: SKILL.md
src/: cli.rs  error.rs  lib.rs  main.rs  release.rs  version.rs
src/cargo/: mod.rs
src/check/: mod.rs
src/config/: defaults.rs  mod.rs  types.rs  validate.rs
src/generate/: ci.rs  homebrew.rs  install.rs  mod.rs  receivers.rs  scoop.rs  validate.rs
src/http/: client.rs  github.rs  mod.rs
src/init/: mod.rs  prompts.rs  serialize.rs  stages.rs
src/package/: archive.rs  binstall.rs  checksum.rs  mod.rs  npm.rs
src/pipeline/: context.rs  mod.rs  pipe.rs  report.rs
src/publish/: build_pipe.rs  github.rs  mod.rs  readme.rs  smoke.rs
src/template/: engine.rs  mod.rs  tests.rs
src/toml_parser/: lexer.rs  mod.rs  parser.rs  tests.rs  value.rs
src/twin/: crates.rs  fault.rs  github.rs  mod.rs  npm.rs  pypi.rs
src/yaml/: mod.rs  parser.rs  tests.rs  value.rs
tests/: generate.rs  integration.rs  twin_pipeline.rs
tests/expect/: run_all.sh  test_hermetic_bootstrap.sh  test_init_custom.exp  test_init_invalid_input.exp  test_init_maximum_reach.exp  test_init_minimal.exp  test_init_rust_ecosystem.exp  test_init_then_generate.exp  test_init_workspace.exp
(+4 files in other folders)
