[package]
name = "bincast"
version = "0.1.13"
edition = "2024"
description = "Ship your Rust binary to every package manager with one command"
license = "MIT"
repository = "https://github.com/benelser/bincast"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1"

[dev-dependencies]
